# YOLOv8-seg

./: .gitignore  README.md  infer.py  requirements.txt  run.md  test_rs.py  vision_frontend.py
dataset/: data.yaml
dataset/labels/: train.cache  val.cache
dataset/labels/train/: 01_frame_000000.txt  01_frame_000005.txt  01_frame_000010.txt  01_frame_000020.txt  01_frame_000025.txt  01_frame_000035.txt  01_frame_000040.txt  01_frame_000045.txt  01_frame_000050.txt  01_frame_000060.txt  01_frame_000065.txt  01_frame_000070.txt  01_frame_000075.txt  01_frame_000080.txt  01_frame_000085.txt  01_frame_000090.txt  01_frame_000100.txt  01_frame_000105.txt  01_frame_000110.txt  01_frame_000115.txt  01_frame_000120.txt  01_frame_000130.txt  01_frame_000140.txt  01_frame_000145.txt  01_frame_000155.txt  01_frame_000165.txt  01_frame_000175.txt  01_frame_000180.txt  01_frame_000195.txt  01_frame_000205.txt  01_frame_000210.txt  01_frame_000215.txt  01_frame_000225.txt  01_frame_000235.txt  01_frame_000245.txt  01_frame_000250.txt  01_frame_000255.txt  01_frame_000260.txt  01_frame_000265.txt  01_frame_000270.txt  (+504 more)
dataset/labels/val/: 01_frame_000015.txt  01_frame_000030.txt  01_frame_000055.txt  (+128 more)
docs/: gripper.md  run.md
ros2_ws/src/cube_grasp_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/cube_grasp_bridge/cube_grasp_bridge/: grasp_controller_node.py  yolo_pose_publisher.py
ros2_ws/src/cube_grasp_bridge/launch/: grasp_bridge.launch.py
scripts/: auto_label.py  extract_frames.py  labelme_to_yolo.py  run_pipeline.py  train.py  yolo_to_labelme.py
utils/: logger.py
